@@ -1,6 +1,7 @@
 cm4all-beng-proxy (0.7.19) unstable; urgency=low
 
   * client-socket: translate EV_TIMEOUT to ETIMEDOUT
+  * fork: refill the input buffer as soon as possible
 
  --
 
